UN-5206 correct overflow search box with css, also align search result summary output
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@2042 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css.source/modules/assistive-tech/_tech-search-results.scss
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css.source/modules/assistive-tech/_tech-search-results.scss
@@ -31,9 +31,17 @@ $assistive-tech-purple: #7a4183;
       margin: 50px 0;
     }
     .selector {
+      max-width: 190px;
       @include bp($bp-large){
         float: right;
       }
+    }
+    // fixes existing AO markup
+    .col-6.push-8 { display: inline-block; }
+    .col-4.pull-6 {
+      display: inline-block;
+      float: right;
+      max-width: 90px;
     }
   }
 
